@@ -19,6 +19,7 @@ Make sure that tasks that will not override existing overrides refuse to enable 
 #531936: Cache handling on contexts was spotty and could cause random errors.
 #545540 by Roger López: Add 5 page elements as available panes for using Panels as your primary page layout: breadcrumb, page title, messages, tabs and help box.
 #537776 by rfay: CTools Plugin Example module to help guide people in making plugins.
+#552020: Show the administrative description on page manager edit forms.
 
 ctools 6.x-1.0-rc1
 ==================
